--- a/TimedBrightness/TimedBrightness.csproj
+++ b/TimedBrightness/TimedBrightness.csproj
@@ -65,7 +65,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndroidBrightnessService .cs" />
     <Compile Include="BrightnessSetting.cs" />
+    <Compile Include="DataProvider.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
